--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   <body>
     <main id="root"></main>
     
-    <script src="bundle.js"></script>
+    <script src="/bundle.js"></script>
   </body>
 </html>
